[workspace]

resolver = "2"

members = [
    "proxy_agent_shared",
    "proxy_agent",
    "proxy_agent_extension",
    "proxy_agent_setup",
]

exclude = [
    "debbuild"
]

[profile.release]
lto = "thin"         # thin LTO does cross-crate dead-code elimination, removing unreachable OpenSSL
strip = "symbols"    # removes the debug info sections and symbol table