[package]
name = "GuestProxyAgent"
version = "1.0.13"       # always 3-number version
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy_agent_shared = { path ="../proxy_agent_shared"}
thread-priority = "0.13.1"
itertools = "0.10.5"          # use to sort iterator elements into a new iterator in ascending order
once_cell = "1.17.0"          # use Lazy
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"         # json Deserializer
serde-xml-rs = "0.6.0"        # xml Deserializer
url = "2.3.1"                 # parse url string
hmac-sha256 = "1.1.6"         # use HMAC using the SHA-256 hash function
hex = "0.4.3"                 # hex encode 
libloading = "0.8.0"          # for dynamic load libraries
regex = "1.9.5"               # match process name in cmdline

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(not(windows))'.dependencies]
sysinfo = "0.27.7"            # read process information for Linux
aya = "0.11.0"                # linux ebpf program loader
users = "0.11.0"              # get user name
libc = "0.2.147"              # linux call
interfaces = "0.0.9"          # get local nic and ipv4 address

[target.'cfg(windows)'.dependencies]
windows-service = "0.5.0"     # windows NT service
windows-acl = "0.3.0"         # ACL the latch key folder
winapi = "0.3.9"              # used by windows-acl PSID

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"             # Rust Windows resource helper to add file version
static_vcruntime = "2.0.0"    # Statically link the VCRuntime when using the MSVC toolchain

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_WindowsProgramming",
  "Win32_Security_Authentication_Identity", 
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_System_Kernel",
]
