[package]
name = "ProxyAgentExt"
version = "1.0.19"      # always 3-number version
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
proxy_agent_shared = { path ="../proxy_agent_shared"}

[target.'cfg(windows)'.dependencies]
windows-service = "0.5.0"     # windows NT 

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"             # Rust Windows resource helper to add file version
static_vcruntime = "2.0.0"    # Statically link the VCRuntime when using the MSVC toolchain

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42.0"
features = [
  "Win32_Storage_FileSystem",
]

[target.'cfg(not(windows))'.dependencies]
sysinfo = "0.29.10"            # read process information for Linux