[package]
name = "ProxyAgentExt"
version = "9.9.9"      # always 3-number version
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
proxy_agent_shared = { path ="../proxy_agent_shared"}
clap = { version = "4.5.17", features =["derive"] } # Command Line Argument Parser
thiserror = "1.0.64"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
ctor = "0.3.6"                # used for test setup and clean up

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"     # windows NT 

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"             # Rust Windows resource helper to add file version
static_vcruntime = "2.0.0"    # Statically link the VCRuntime when using the MSVC toolchain

[target.'cfg(not(windows))'.dependencies.nix]
version = "0.29.0"
features = [
  "net", 
  "signal"
]

[target.'cfg(not(windows))'.dependencies]
sysinfo = "0.30.13"            # read process information for Linux
