[package]
name = "proxy_agent_setup"
version = "9.9.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy_agent_shared = { path ="../proxy_agent_shared"}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"             # Rust Windows resource helper to add file version
static_vcruntime = "2.0.0"    # Statically link the VCRuntime when using the MSVC toolchain
