[package]
name = "proxy_agent_setup"
version = "1.0.38"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy_agent_shared = { path ="../proxy_agent_shared"}
clap = { version = "4.5.17", features =["derive"] } # Command Line Argument Parser 
thiserror = "1.0.64"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"             # Rust Windows resource helper to add file version
static_vcruntime = "2.0.0"    # Statically link the VCRuntime when using the MSVC toolchain
