[package]
name = "proxy_agent_shared"
version = "1.0.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.1.0"    # for event queue
once_cell = "1.17.0"          # use Lazy
time = { version = "0.3.30", features = ["formatting"] } 
thread-id = "4.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"         # json Deserializer

[target.'cfg(windows)'.dependencies]
windows-service = "0.5.0"     # windows NT service
winreg = "0.11.0"             # windows reg read/write

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_WindowsProgramming",
  "Win32_Security_Authentication_Identity", 
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
]

[target.'cfg(not(windows))'.dependencies]
os_info = "3.7.0"   # read Linux OS version and arch