[package]
name = "proxy_agent_shared"
version = "9.9.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.1.0"    # for event queue
once_cell = "1.17.0"          # use Lazy
time = { version = "0.3.30", features = ["formatting"] } 
thread-id = "4.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"         # json Deserializer
regex = "1.11"               # match file name 
thiserror = "1.0.64"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
log = { version = "0.4.26", features = ["std"] }
ctor = "0.3.6"                # used for test setup and clean up
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
quick-xml = { version = "0.38.0", features = ["serialize", "serde-types"]}
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"     # windows NT service
winreg = "0.11.0"             # windows reg read/write
serde-xml-rs = "0.8.1"        # xml Deserializer with xml attribute
chrono = "0.4.41"             # parse date time string

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_EventLog",
  "Win32_System_WindowsProgramming",
  "Win32_Security_Authentication_Identity", 
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_Storage_FileSystem",
]

[target.'cfg(not(windows))'.dependencies]
os_info = "3.7.0"   # read Linux OS version and arch

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
]