[package]
name = "proxy_agent_shared"
version = "1.0.37"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrent-queue = "2.1.0"    # for event queue
once_cell = "1.17.0"          # use Lazy
time = { version = "0.3.30", features = ["formatting"] } 
thread-id = "4.0.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"         # json Deserializer
serde-xml-rs = "0.8.1"        # xml Deserializer with xml attribute
regex = "1.11"               # match file name 
thiserror = "1.0.64"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-util = "0.7.11"
log = { version = "0.4.26", features = ["std"] }
ctor = "0.3.6"                # used for test setup and clean up
hex = "0.4.3"                 # hex encode 
itertools = "0.10.5"          # use to sort iterator elements into a new iterator in ascending order
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"     # windows NT service
winreg = "0.11.0"             # windows reg read/write
serde-xml-rs = "0.8.1"        # xml Deserializer with xml attribute
chrono = "0.4.41"             # parse date time string

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_Security",
  "Win32_System_EventLog",
  "Win32_System_WindowsProgramming",
  "Win32_Security_Cryptography",
  "Win32_Security_Authentication_Identity", 
  "Win32_System_Diagnostics_Debug",
  "Win32_System_SystemInformation",
  "Win32_Storage_FileSystem",
]

[target.'cfg(not(windows))'.dependencies]
os_info = "3.7.0"   # read Linux OS version and arch

# For MUSL targets (Linux MUSL)
[target.'cfg(all(target_env = "musl", not(target_os = "windows")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


# For GNU Linux (optional, if you want system OpenSSL)
[target.'cfg(all(target_env = "gnu", not(target_os = "windows")))'.dependencies]
openssl = "0.10"
